[package]
name = "openvr-tracker"
version = "0.1.0"
authors = ["David Weis <dweis7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openvr = "0.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = { version = "0.25", features = ["serde-serialize"] }
socket2 = "0.3"
